--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,8 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
+.idea/.idea.jam2025/.idea/indexLayout.xml
+.idea/.idea.jam2025/.idea/vcs.xml
+Assets/Resources/Fonts/Nunito/Nunito-Bold SDF.asset
+Assets/Resources/Fonts/Nunito/Nunito-Bold SDF.asset
+Assets/Resources/Fonts/Nunito/Nunito-Bold SDF.asset
